--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,5 +5,9 @@ websockets>=12.0
 PyJWT>=2.8.0
 vaderSentiment>=3.3.2
 
+# ── agents ────────────────────────────────────
+groq>=0.18.0
+modal>=1.0.0
+
 # ── shared / infra ────────────────────────────
 python-dotenv>=1.0.0
