--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,8 @@
 websockets>=12.0
 PyJWT>=2.8.0
 vaderSentiment>=3.3.2
+aiohttp>=3.8.0
+cryptography>=3.4.8
 
 # ── agents ────────────────────────────────────
 groq>=0.18.0
