feat(OrderTicket, server): integrate DFlow trading functionality and enhance order execution
- Replaced SolanaWallet with DFlowWallet in the App component for on-chain trading.
- Added execution venue selection in OrderTicket, allowing users to choose between simulation and DFlow for real trades.
- Implemented DFlow trade execution logic in the server, including error handling and wallet balance checks.
- Updated requirements to include necessary libraries for DFlow integration.
- Enhanced UI elements in OrderTicket to reflect the selected execution venue and provide user feedback.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,3 +16,8 @@ redis[asyncio]>=5.0
 
 # ── shared / infra ────────────────────────────
 python-dotenv>=1.0.0
+
+# ── solana / dflow ────────────────────────────
+solders>=0.21.0
+solana>=0.34.0
+base58>=2.1.1
